# yata

./: .gitignore  Cargo.toml
.claude/handoffs/active/: 002-review-request-notifications.md  008-review-request-api-foundation.md  012-review-request-caching-repository.md  016-review-request-sync-engine.md  020-review-request-mode-switching.md  022-architect-verdict-mode-switching.md  026-architect-verdict-sync-reliability.md
YATA/: generate_icon.py
YATA/YATA/: AppDelegate.swift  Info-Debug.plist  Info.plist  YATAApp.swift
YATA/YATA.xcodeproj/: project.pbxproj
YATA/YATA.xcodeproj/xcshareddata/xcschemes/: YATA.xcscheme
YATA/YATA/Assets.xcassets/YATADone.colorset/: Contents.json
YATA/YATA/Assets.xcassets/YATAGreen.colorset/: Contents.json
YATA/YATA/Assets.xcassets/YATARed.colorset/: Contents.json
YATA/YATA/Assets.xcassets/YATAYellow.colorset/: Contents.json
YATA/YATA/Models/: AddEditMode.swift  AppTab.swift  ColorSchemePreference.swift  PendingMutation.swift  Priority.swift  RepeatFrequency.swift  RepeatingAddEditMode.swift  RepeatingItem.swift  RepeatingItemData.swift  TodoItem.swift  Weekday.swift
YATA/YATA/Networking/: APIClient.swift  APIError.swift  Endpoint.swift
YATA/YATA/Repository/: APITodoRepository.swift  CachingRepository.swift  LocalRepeatingRepository.swift  LocalTodoRepository.swift  RepeatingRepository.swift  TodoRepository.swift
YATA/YATA/Services/: DataStoreLoader.swift  KeychainHelper.swift  NotificationPermissionManager.swift  NotificationScheduler.swift  RepositoryProvider.swift
YATA/YATA/Sync/: MutationLogger.swift  NetworkMonitor.swift  SyncEngine.swift
YATA/YATA/Theme/: YATAPalette.swift  YATATheme.swift  YATATypography.swift
YATA/YATA/Utilities/: HapticManager.swift
YATA/YATA/ViewModels/: HomeViewModel.swift  RepeatingViewModel.swift
YATA/YATA/Views/: AddEditSheet.swift  ContentView.swift  DataStoreErrorView.swift  DoneSectionView.swift  DotRingView.swift  HomeView.swift  NotificationPreviewCard.swift  NotificationPrimerSheet.swift  PriorityContainerView.swift  ReminderPickerSheet.swift  RepeatingAddEditSheet.swift  RepeatingPillView.swift  RepeatingView.swift  SettingsView.swift  TodoPillView.swift  WeekStripView.swift
YATA/YATATests/: APIClientTests.swift  AppDelegateAwaitContainerTests.swift  AppDelegateBGTaskTests.swift  CachingRepositoryTests.swift  DTOTests.swift  DataStoreLoaderTests.swift  EndpointTests.swift  LiveServerIntegrationTests.swift  LocalTodoRepositoryTests.swift  ModelMigrationTests.swift  MutationLoggerTests.swift  NotificationActionRoutingTests.swift  SyncEngineTests.swift
YATA/docs/: API_spec.md  calendar_plan.md  conflict_resolution_redesign.md  design_implementation_brief.md  design_review.md  notification_plan.md  p2_p3_execution_plan.md  plan_api.md  yata-guide.md
yata_backend/: Cargo.toml  Makefile  README.md  build.rs
yata_backend/deployment/: yata-backup.service  yata-backup.timer
yata_backend/migrations/: 001_initial.sql  002_password_changed_at.sql
yata_backend/src/: auth.rs  backup.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  observability.rs  password.rs  rate_limit.rs  routes.rs  time.rs
yata_backend/src/handlers/: auth.rs  health.rs  items.rs  mod.rs  operations.rs  repeating.rs  stats.rs  sync.rs
yata_backend/src/models/: deletion_log.rs  mod.rs  repeating_item.rs  todo_item.rs
yata_backend/tests/: auth_revocation.rs  backup.rs  db_pragmas.rs  e2e_socket.rs  health.rs  integration.rs  observability.rs  rate_limit.rs  tenant_isolation.rs
yata_cli/: Cargo.toml  README.md
yata_cli/src/: api.rs  config.rs  main.rs  pretty.rs  schema.rs
(+4 files in other folders)
