[package]
name = "yata_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono", "uuid"] }
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
argon2 = "0.5"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
rpassword = "7"
# Per-IP rate limiting on /auth/token. Argon2 is the only thing
# standing between a leaked username list and an internet-rate
# brute-force attack — at 1 hash/50ms an attacker still gets
# ~500k attempts/day, so we cap login attempts at the layer above.
tower_governor = "0.7"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
# Used by `tests/backup.rs` to set deterministic mtimes on temp files
# so rotation ordering is unambiguous. Std lacks a portable mtime
# setter — `filetime` is the standard ~20KB shim.
filetime = "0.2"
# Used by `tests/e2e_socket.rs` to drive the server through a real
# TCP listener — proves `axum::serve` is wired with
# `into_make_service_with_connect_info::<SocketAddr>()` so
# `SmartIpKeyExtractor` actually finds a peer address. The
# `oneshot()` path used by other tests bypasses that wiring.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

