[package]
name = "yata_cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "yata"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
rpassword = "7"
uuid = { version = "1", features = ["v4", "serde"] }
